[gd_scene load_steps=16 format=2]

[ext_resource path="res://Textures/UI/QuitText.png" type="Texture" id=1]
[ext_resource path="res://Textures/World/Overlay.png" type="Texture" id=2]
[ext_resource path="res://Textures/UI/MenuSmaller.png" type="Texture" id=3]
[ext_resource path="res://Textures/UI/ButtonSmaller.png" type="Texture" id=4]
[ext_resource path="res://Textures/UI/OptionsText.png" type="Texture" id=5]
[ext_resource path="res://Textures/GorgeousPixel-BWO85.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/PauseInterface.gd" type="Script" id=8]
[ext_resource path="res://Textures/UI/ResumeText.png" type="Texture" id=11]
[ext_resource path="res://Textures/UI/ButtonHighlight.png" type="Texture" id=12]
[ext_resource path="res://Textures/UI/XButton.png" type="Texture" id=13]
[ext_resource path="res://Textures/UI/XButtonHighlight.png" type="Texture" id=16]
[ext_resource path="res://Textures/UI/XButtonPress.png" type="Texture" id=18]
[ext_resource path="res://Textures/UI/ButtonPress.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
extra_spacing_char = 1
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.05, -0.25, 0, 0.25, 0, 0.07, -0.25, 0, 0.25, 0, 0.05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -81.0
margin_right = 144.0
margin_bottom = 81.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuTexture" type="TextureRect" parent="."]
margin_left = 120.0
margin_top = 48.5
margin_right = 168.0
margin_bottom = 113.5
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.08
margin_left = -41.0
margin_right = 41.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.827451, 0.74902, 0.662745, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.133333, 0.133333, 1 )
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
anims/Idle = SubResource( 2 )

[node name="Menus" type="Control" parent="."]
margin_right = 288.0
margin_bottom = 162.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="Menus"]
margin_right = 288.0
margin_bottom = 162.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Menus/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -26.0
margin_right = 18.0
margin_bottom = 27.0
custom_constants/separation = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="TextureButton" parent="Menus/MainMenu/Menu"]
margin_left = 2.0
margin_top = 2.0
margin_right = 34.0
margin_bottom = 17.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../ExitButton")
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 12 )
texture_focused = ExtResource( 12 )
stretch_mode = 3

[node name="Resume" type="TextureRect" parent="Menus/MainMenu/Menu/ResumeButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -7.5
margin_right = 16.0
margin_bottom = 7.5
texture = ExtResource( 11 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="Menus/MainMenu/Menu"]
margin_left = 2.0
margin_top = 19.0
margin_right = 34.0
margin_bottom = 34.0
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../ResumeButton")
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 12 )
texture_focused = ExtResource( 12 )
stretch_mode = 3

[node name="Options" type="TextureRect" parent="Menus/MainMenu/Menu/OptionsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -7.5
margin_right = 16.0
margin_bottom = 7.5
texture = ExtResource( 5 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="Menus/MainMenu/Menu"]
margin_left = 2.0
margin_top = 36.0
margin_right = 34.0
margin_bottom = 51.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../ResumeButton")
focus_next = NodePath("../ResumeButton")
focus_previous = NodePath("../OptionsButton")
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 12 )
texture_focused = ExtResource( 12 )
stretch_mode = 3

[node name="Quit" type="TextureRect" parent="Menus/MainMenu/Menu/ExitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -7.5
margin_right = 16.0
margin_bottom = 7.5
texture = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="Control" parent="Menus"]
visible = false
margin_right = 288.0
margin_bottom = 162.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Menus/OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -26.0
margin_right = 18.0
margin_bottom = 27.0
custom_constants/separation = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Menus/OptionsMenu"]
margin_left = 158.75
margin_top = 45.0417
margin_right = 171.75
margin_bottom = 58.0417
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 16 )
texture_focused = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}
